# gempyp

./: .gitignore  .readthedocs.yml  BeforeSampleFile (1).py  BeforeSampleFile.py  CONTRIBUTING.rst  GPLogger.py  PytestTestcases.py  README.md  Result_2022_Jul_25_153344_082548.html  SDKAutomation.py  Testcase_1.py  common.py  config.conf  create.py  f6783ac8-2a04-47f3-8848-8deac230c239.py  final_report.html  gemini  gemini.pub  gempyp.conf  gempyp_plugin.py  instructions.txt  linuxTesting.txt  logs.txt  pyproject.toml  pytest.ini  pyvenv.cfg  running.py  runningFile.py  setup.py  suite.html  test.py  test1.py  testFunction.py  testcase.html  testing.py  testingFile.py
GempypOutputFolder/GEMPYP_TEST_prod_FEATURE_REGRESSION_2022_Jul_25_193317_278316/: Result_2022_Jul_25_193319_179045.html
GempypOutputFolder/GEMPYP_TEST_prod_FEATURE_REGRESSION_2022_Jul_26_121745_310211/: Result_2022_Jul_26_121747_085303.html
Scripts/: activate  activate.bat
config/: DefaultSettings.py  GitLinkXML.py  xmlConfig.py
data_compare/: compare.py
data_compare/core/: comparator.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  usage.ipynb
dv/: dvCompare.py  dvDataframe.py  dvObj.py  dvReporting.py
engine/: baseTemplate.py  dataUpload.py  engine.py  testData.py
gempyp/: Annotations.py  __init__.py  cli.py  common.py  config.conf  config.ini  data_uploader.py  final_report.html  gemPyp.py  gempyp_plugin.py
gempyp/config/: DefaultSettings.py  GitLinkXML.py  Result.html  baseConfig.py  customParser.py  gempyp.conf  testcase_conf.json  xmlConfig.py
gempyp/data_compare/: data_comp.py
gempyp/dv/: dataCompare.py  dfOperations.py  dvCompare.py  dvDatabases.py  dvDataframe.py  dvObj.py  dvReporting.py  dvRunner.py  writeResultFile.py
gempyp/dvApi/: dvApiReporting.py  dvApiRunner.py
gempyp/dvm/: df_compare.py  dvmReporting.py  dvmRunner.py
gempyp/engine/: baseTemplate.py  dataUpload.py  engine.py  gempypHelper.py  newRunner.py  newSimpleTestcase.py  reportGenerator.py  runner.py  simpleTestcase.py  testData.py
gempyp/jira/: azureIntegration.py  jiraIntegration.py  jiraIntegrationCopy.py
gempyp/libs/: common.py  custom_s3.py  gem_s3_common.py  logConfig.py  parsers.py  s3_common.py
gempyp/plugin/: behave_custom_hooks.py  common.py  custom_hooks.py  environment.py
gempyp/pyprest/: apiCommon.py  compareFunctions.py  keyCheck.py  legacyComparison.py  miscVariables.py  postAssertion.py  postVariables.py  preVariables.py  predefinedFunctions.py  pypRest.py  reporting.py  restEngine.py  restObj.py  utils.py  variableReplacement.py
gempyp/reporter/: reportGenerator.py
gempyp/sdk/: Gempytest.py  executor.py  executor_temp.py  gempyp.conf  test.py  worker.py
gempyp_reports/GEMPYP_TEST_beta_FEATURE_REGRESSION_2022_Jun_22_184321_562611/: Result_2022_Jun_22_184324_473345.html
gempyp_reports/GEMPYP_TEST_beta_FEATURE_REGRESSION_2022_Jun_22_184616_371451/: Result_2022_Jun_22_184619_218768.html
gempyp_reports/GEMPYP_TEST_beta_FEATURE_REGRESSION_2022_Jun_22_184628_552538/: Result_2022_Jun_22_184631_423786.html
gempyp_reports/GEMPYP_TEST_beta_FEATURE_REGRESSION_2022_Jun_22_190236_387088/: Result_2022_Jun_22_190240_633730.html
jira/: jiraIntegration.py
libs/enums/: run_types.py
pyprest/: apiCommon.py  compareFunctions.py  preVariables.py  pypRest.py  reporting.py  restObj.py
reporter/: reportGenerator.py
src/gempyp/: final_report.html  gemPyp.py  (+4 more)
tests/: authenticate.py  test_gempyp.py  test_pygem.py
(+303 files in other folders)
