[tool.poetry]
name = "pygem"
version = "0.1.5"
description = "An ecosystem of libraries useful for software development"
authors = ["Shubham Shukla"]
license = "MIT"
readme = "README.md"
documentation = "https://pygem.readthedocs.io/en/latest/"
homepage = "https://github.com/Gemini-Solutions/pygem"
repository = "https://github.com/Gemini-Solutions/pygem"

include = ["suite.html", "testcase.html"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.4"
pandas = "^1.3.5"
lxml = "^4.7.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.2"
nbsphinx = "^0.8.5"
ipykernel = "^5.5.5"
sphinx-autoapi = "^1.8.1"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pygem = "pygem.pygem:main"
