[tool.poetry]
name = "gempyp"
version = "0.1.1"
description = "An ecosystem of libraries useful for software development"
authors = ["Gemini Solutions-QA"]
license = "MIT"
readme = "README.md"
documentation = "https://gempyp.readthedocs.io/en/latest/"
homepage = "https://github.com/Gemini-Solutions/gempyp"
repository = "https://github.com/Gemini-Solutions/gempyp"

include = ["suite.html", "testcase.html"]

[tool.poetry.dependencies]
python = "^3.10.4"
pytest = "^6.2.4"
certifi = "^2022.6.15"
cffi = "^1.15.0"
charset-normalizer = "^2.0.12"
coloredlogs = "^15.0.1"
cryptography = "^37.0.2"
humanfriendly = "^10.0"
idna = "^3.3"
lxml = "^4.9.0"
ntlm-auth = "^1.5.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
pycparser = "^2.21"
pyreadline3 = "^3.4.1"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
requests = "^2.28.0"
requests-ntlm = "^1.1.0"
six = "^1.16.0"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.2"
nbsphinx = "^0.8.5"
ipykernel = "^5.5.5"
sphinx-autoapi = "^1.8.1"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gempyp = "gempyp.gempyp:main"
